# DevOps-Course-Starter

./: .env.template  .env.test  .gitignore  .travis.yml  Dockerfile  README.md  Vagrantfile  deploy.sh  deployment.yaml  docker-compose.yml  gunicorn.service  main.tf  outputs.tf  pyproject.toml  start_todo-app.sh  todo_app.service  variables.tf  webhook.sh
scripts/: webhook.sh
todo_app/: .gitignore  app.py  moo.py  trello_key.txt
todo_app/data/: .gitignore  session_items.py  todo.py  trello_api.py
todo_app/templates/: index.html  index_ro.html  layout.html
todo_app/tests/: test_app.py  test_trello.py  unit_test.py
todo_app/tests_e2e/: test_e2e.py
